# FastAPI-example

./: .env.dist  .gitignore  Dockerfile  README.md  configuration.py  docker-compose.yaml  pyproject.toml  settings.py
migrations/models/: 0_20230716174705_init.py
src/: app.py  models.py  schemas.py
